# audio_streaming_prototype

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/androidtestoboetransmitter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LockFreeQueue.h  PlaybackEngine.cpp  PlaybackEngine.h  StreamingEngine.cpp  StreamingEngine.h  jni_bridge.cpp
app/src/main/java/com/example/androidtestoboetransmitter/: AudioEngine.kt  G711.java  JavaUtils.java  MainActivity.kt
app/src/main/java/com/example/androidtestoboetransmitter/streams/: StreamBaseWorker.kt  StreamLiveListenerWorker.kt  StreamLivePresenterWorker.kt  StreamLiveWorker.kt
app/src/main/java/nds/: NdsUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/androidtestoboetransmitter/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
